--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.4"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
